<resources>
    <string name="app_name">MVPBaseclass</string>
    <string name="loading">Loading</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="server_error">Something went wrong at server end</string>
    <string name="network_error">The Internet connection appears to be offline.</string>
    <string name="retry">Retry</string>

    <string name="welcome_back">Hi, \nWelcome back!</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="pass_empty">Password Cannot be Empty</string>
    <string name="phone_empty">Phone Cannot be Empty</string>
    <string name="valid_pass">Password too short</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="email_valid">Please Enter valid email</string>
    <string name="email_empty">Email Field cannot be empty</string>

</resources>