<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView3"
        style="@style/h6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_back"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/txt_input_password"
        app:layout_constraintStart_toStartOf="@+id/txt_input_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pg_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:theme="@style/progressBar"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_forgot_password"
        style="@style/Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_your_password"
        app:layout_constraintEnd_toEndOf="@+id/txt_input_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_password" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_account" />

        <TextView
            android:id="@+id/txt_sign_up"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_marginhalf"
            android:text="@string/sign_up"
            android:textColor="@color/black" />

    </TableRow>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/all_marginhalf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:errorTextAppearance="@style/errorAppearanceStyle"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edt_email"
            style="@style/EditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:paddingBottom="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorTextAppearance="@style/errorAppearanceStyle"
        app:layout_constraintEnd_toEndOf="@+id/txt_input_email"
        app:layout_constraintStart_toStartOf="@+id/txt_input_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_edt_password"
            style="@style/EditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:paddingBottom="16dp" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>